--- a/resources/assets/sass/skills.scss
+++ b/resources/assets/sass/skills.scss
@@ -2,6 +2,7 @@
 
 #skills {
     position: relative;
+    overflow: hidden;
 
     .bg-position {
         position: relative;
